aquamarine-biology.css
/* ... */
/* Link colors */

a:link,
a:visited {
	color: #1c3f36 !important;
}

a:hover {
	color: #297560 !important;
	transition: 0.5s;
}

/* Profile Styling */

.about-me:before {
	content: url("https://cdn.allthepics.net/images/2026/04/27/am_lion.png");
	width: 80%;
}

.about-me {
  background: radial-gradient(#7cc2af, #19765d);
  width: 90%;
  height: 300px;
  overflow-y: scroll;
  border: solid 2px #0c6249;
  border-radius: 10px;
  box-shadow: 0px 5px 30px #19765d !important;
}

/* Text input boxes */

input,
select,
textarea {
	background: #7cc2af !important;
	border: none !important;
	border-radius: 5px !important;
	box-shadow: none !important;
	text-shadow: none !important;
	color: #19765d !important;
}

/* CSS Credit */

.breadcrumb::after {
	content: "custom css by lyri | #583579 ";
	color: #9CE8D3 !important;
	font-size: 12px;
	position:absolute;
	top: 6px;
	left: 30px;
}

/* Main panel container appearance*/

.container.main {
	background: radial-gradient(#7cc2af, #19765d);
	opacity: 97%;
	border: solid 1px #7cc2af;
	box-shadow: 0px 1px 10px #7cc2af !important;
	border-radius: 4px;
}

/* Switch Account and Bug Box buttons */

button.button:hover, .btn:hover, .btn-default:hover {
	background: #19765d;
	border: none !important;
	border-radius: 4px;
	text-shadow: none !important;
	color: #7cc2af !important;
}

.btn img {
	display: none;
}

.btn-default {
	background: #19765d !important;
	color: #7cc2af !important;
	position: relative;
	top: -20px
}

.btn.btn-default.btn {
	color: #7cc2af !important;
}

.btn, button.button {
	background: #19765d;
	border: none !important;
	border-radius: 4px;
	text-shadow: none !important;
	color: #7cc2af !important;
}

button.button {
	position: relative;
	left: 25% !important;;
}
.btn {
	position: relative;
	left: 34%;
	top: -50%;
		
}


/* Make left panel background and border invisible */

.col-md-9 {
	background: none;
	border-right: none
}

/* Topbar (Welcome and account navigation) */

.topbar {
	background: #5f9888 !important;
	color: #9CE8D3;
	border: solid 1px #7cc2af;
	box-shadow: 0px 1px 10px #7cc2af !important;
	border-radius: 0px 0px 4px 4px;
}

/* Navbar (Den/Crossroads/Etc.) */

.navbar {
	background: linear-gradient(to right, #19765d, #085e46);
	border-bottom: none;
	color: #9CE8D3;
	border-radius: 10px 10px 0px 0px;
	opacity: 1;
}

.navbar li a {
	color: #9CE8D3 !important;
}

.navbar li a:hover {
	background: #9CE8D3 !important;
	border-bottom: none;
	color: #297560 !important;
	border-radius: 0px;
	filter: brightness(100%) opacity(90%);
	transition: 0.5s !important;
	height: 50px;
	width: auto !important
}

/* Breadcrumb (Home button, den owner, bookmark) */

.breadcrumb {
	background: transparent !important;
	color: #9CE8D3 !important;
	border: solid 1px #297560 !important;
	border-radius: 5px;
	text-align:left !important;
}

.breadcrumb .active {
	color: #9CE8D3 !important;
}

/* Bookmark button */

input.floatright, input.floatright:hover {
	background: #19765d !important;
	border: none !important;
	border-radius: 4px !important;
	color: #9CE8D3 !important;
}

/* Alerts (i.e. "Your lionesses have returned from hunting!") */

.alert,
.alert-warning,
.alert-danger {
	background: #7cc2af !important;
	border: none;
	color: #085e46;
	border-radius: 4px !important;
	padding: 5px;
	margin-top: 20px;
	text-align: right;
}

/* Main header appearance ("___"'s Den) */

h1 {
    font-size: 40px;
    background: #7cc2af;
    -webkit-background-clip: text;
    background-clip: text;
    color: #9CE8D3;
    text-align: center;
}

/* Secondary header */

h2 {
	font-size: 24px;
	text-align: right;
	color: #9CE8D3;
}

/* Tertiary header */

h3 {
	font-size: 14px !important;
	text-align: right;
	color: #9CE8D3;
}

/* Right-side panel appearance */

.sidebar h3 {
	background: transparent;
	color: #9CE8D3 !important;
	font-size: 22px !important;
	text-align: right;
	position: relative;
	padding-top: 25px;
}

.panel {
	background: #4ca089 !important;
	border: solid 1px #7cc2af !important;
	color: #1c3f36 !important;
	border-radius: 4px;
	text-align: right;
}

/* Progress bars (Energy, hunger, EXP, IMP) */
.progress {
	background: #7cc2af;
	color: #000000 !important;
	border-radius: 4px !important;
}

.progress-bar, .progress-bar-danger, .progress-bar-success {
	background: linear-gradient(to right, #4ca089, #19765d, #467266);
	border-radius: 4px !important;
}

.progress div {
	color: #1c3f36 !important;
	font-weight: bolder;
}

/*  Lion profile table and headers (Level, Stats, Territory Count, Etc.) */

.table {
	background: radial-gradient(#7cc2af, #19765d);
	border: none !important;
	border-collapse: separate;
	border-radius: 10px;
	box-shadow: 0px 5px 30px #19765d !important;
}

.table .top {
	color: #9CE8D3 !important;
}

.top,
th {
	background: #19765d !important;
	color: #9CE8D3 !important;
	border-radius: 10px 10px 0px 0px;
	border: 1px #7cc2af;
}

.bottom,
th, .bottom a {
	background: #19765d !important;
	border: 1px #7cc2af;
	color: #9CE8D3 !important;
	border-radius: 4px 4px 4px 4px;
}

td.bottom button {
	margin-top: 10px;
}

.inner-table .left {
	background: #19765d !important;
	color: #7cc2af;
	border-radius: 4px 4px 4px 4px !important;
}

.inner-table .right {
	background: #7cc2af;
	color: #085e46;
	border-radius: 4px 4px 4px 4px !important;
}

td.right {
	border-radius: 0px !important;
}

.right_odd {
	background: none !important
}

td.left.b, div.lionImage.featured-lion {
	background: transparent;
}

/* Lion and user profile pictures */

/*div#lion_image {
	border-radius: 4px !important;
    opacity: 0.9;
	overflow: hidden;
    border: solid 4px #7cc2af;
    box-shadow: 0px 0px 5px #1D2C24;
    transition: 0.2s;
	margin-top: 15px; 
}

div#lion_image:hover {
    transform: scale(1.05);
    transition: 0.4s;
    opacity: 1;
    box-shadow: 0px 0px 8px #97BE96;
}*/

/* Lion and user profile pictures */

div#lion_image {
	opacity: 0%;
}
/* ... */

